2005-04-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/z80/stdio.h,
	* device/include/z80/string.h: removed these highly incomplete files so
	  SDCC can use the default ones in device/include/

2005-04-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/gen.c (genEndFunction): removed unused variable to fix
	gcc warning.
	* device/lib/Makefile.in: default PORTINCDIR to the mcs51 subdir to
	fix sdcpp warnings.

2005-04-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/malloc.h: removed redundant __reentrant prototypes
	* device/lib/_mullong.c: added working xstack variant in asm (C version
	  doesn't pass regression tests)
	* device/lib/bpx.c: used __data and made bpx char for mcs51
	* src/SDCCast.c (decorateType): removed unused GPTYPE_IDATA,
	  (createFunction): fixed bug with xstackPtr
	* src/SDCCcse.c: corrected comments
	* src/SDCCopt.c (convertToFcall): fixed warning in MSVC,
	  (killDeadCode, eBBlockFromiCode): removed unused code
	* src/SDCCsymt.h: removed unused GPTYPE_GPTR and GPTYPE_IDATA,
	  corrected comments
	* src/mcs51/gen.c (aopForSym, aopPut, toBoolean, unsaveRegisters,
	  assignResultValue, genCall, genFunction, genEndFunction, genAnd,
	  genOr, genXor, genAddrOf): fixed several bugs concerning xstack
	  (genModOneByte): fixed warning in MSVC
	* src/mcs51/main.c (): added comments
	* src/mcs51/peeph.def: changed 129 to 129.a, added 129.b, 129.c & 129.d

2005-04-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmain.c (linkEdit): oops, changed one line too many

2005-04-11 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmain.c (linkEdit): fixed bug with finding crt0.o for z80

2005-04-10 Vangelis Rokas <vrokas AT users.sourceforge.net>

	* src/pic16/glue.c (printIvalChar): fixed bug when emitting
	characters arrays of larger size than the declared one.

2005-04-10 Borut Razem <borut.razem AT siol.net>

	* src/pic/gen.c (genInline),
	  src/pic/pcode.c (newpCodeAsmDir), (pCode2str),